<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:orientation="vertical"
	style="@style/PolyPage">

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="190dp"
           android:background="@drawable/list_item_selector"
           android:orientation="vertical" 
           android:paddingBottom="@dimen/activity_vertical_margin"
		   android:paddingLeft="@dimen/activity_horizontal_margin"
		   android:paddingRight="@dimen/activity_horizontal_margin"
		   android:paddingTop="@dimen/activity_vertical_margin"
           >

           <LinearLayout
               android:id="@+id/linearLayout1"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center_horizontal"
               android:orientation="horizontal"
               android:padding="6dp"
               android:weightSum="2" >
           </LinearLayout>

           <CheckBox
               android:id="@+id/service_checkbox"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignTop="@+id/linearLayout1"
               android:text="@string/enableService" />

           <CheckBox
               android:id="@+id/notif_checkbox"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignLeft="@+id/service_checkbox"
               android:layout_below="@+id/service_checkbox"
               android:text="@string/enableNotifications" />

           <TextView
               android:id="@+id/textView1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignLeft="@+id/notif_checkbox"
               android:layout_below="@+id/notif_checkbox"
               android:layout_marginTop="14dp"
               android:text="@string/serviceInterval"
               android:textAppearance="?android:attr/textAppearanceMedium" />

           <Spinner
               android:id="@+id/interval_spinner"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignLeft="@+id/textView1"
               android:layout_below="@+id/textView1"
               android:layout_marginTop="5dp" />

       </RelativeLayout> 
</LinearLayout> 